docs/participa: adicionando participacoes do modulo modelagem bpmn (foco 3)

--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -22,7 +22,7 @@ TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA 
 | Letícia de Cássia Hladczuk Rodrigues |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
 |     Mateus Levy Avelans Boquady      |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
 |         Pablo Serra Carvalho         |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|               Rodrigo                |                      Não participou da confecção do Design Sprint                      |                     Nula                     | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+|      Rodrigo Fonseca Rodrigues       |                      Não participou da confecção do Design Sprint                      |                     Nula                     | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
 
 ## Módulo Artefato Generalista (Foco_2)
 
@@ -39,5 +39,19 @@ TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA 
 
 EXEMPLO:
 | Fulano | 1. Modelagem da atividade ATIVIDADE_X. 2. Participação no subprocesso SUBPROCESSO_Y | Regular | Registro nos Versionamentos do Documento de Modelagem BPMN, conforme (link) e debates nas Issues (links)
+
+|            Nome do Membro            |                                                                          Contribuição                                                                          | Significância da Contribuição para o Projeto |                                                                                                                                                                                       Comprobatórios                                                                                                                                                                                       |
+| :----------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------: | :------------------------------------------: | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
+|     Lucas Gama De Araujo Bottino     | Participação na confecção do BPMN do Design Sprint, confecção e revisão do BPMN de Metodologia e revisão dos BPMN de Uso do Sistema e Elicitação de Requisitos |                  Excelente                   | [Revisor do PR 'adicionando metodologia bpmn' #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30), [Commit Diagrama BPMN Metodologia](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30/commits/9bda33f007c70325fcf239393167a59ac4ce7765), [Reunião BPMN Design Sprint](Projeto/Iniciativas%20Extras/ata_07.md), |
+|          Luiza Maluf Amorim          |                    Participação na confecção do BPMN Elicitação de Requisitos, revisão do BPMN Design Sprint, Uso do Sistema e Metodologia.                    |                  Excelente                   |                                                            [Commit Diagrama BPMN Elicitação de Requisitos](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25/commits/569ce8af00e341e427ea011fa3ecd6f0a15290a1), [Reunião da confecção do BPMN](https://www.youtube.com/watch?v=033lENt9pqk)                                                             |
+|         Arthur Fonseca Vale          |                                             Participação na confecção do BPMN do Uso do Sistema e de Metodologia.                                              |                  Excelente                   |                                                                   [Commit Diagrama BPMN do Design Sprint](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/24/commits/45d87a2ecdb7e114a8a03f9a6161c24b033df6b2), [Reunião da confecção do BPMN](Projeto/Iniciativas%20Extras/ata_01.md)                                                                   |
+|    Carlos Henrique de Souza Bispo    |                                             Participação na confecção do BPMN do Uso do Sistema e de Metodologia.                                              |                  Excelente                   |                                                                                                                                                                        [Reunião da confecção do BPMN](COLOCAR LINK)                                                                                                                                                                        |
+|                                      |
+|       Fillipe Souto de Andrade       |                                                  Participação na confecção do BPMN Elicitação de Requisitos.                                                   |                  Excelente                   |                                                                                                                                                        [Reunião da confecção do BPMN](https://www.youtube.com/watch?v=033lENt9pqk)                                                                                                                                                         |
+|      Gabriel Saraiva Canabrava       |                                             Participação na confecção do BPMN do Uso do Sistema e de Metodologia.                                              |                  Excelente                   |                                                                                                                                                                        [Reunião da confecção do BPMN](COLOCAR LINK)                                                                                                                                                                        |
+| Letícia de Cássia Hladczuk Rodrigues |                                                   Participação na confecção do BPMN Elicitação de Requisitos                                                   |                  Excelente                   |                                                                                                                                                        [Reunião da confecção do BPMN](https://www.youtube.com/watch?v=033lENt9pqk)                                                                                                                                                         |
+|     Mateus Levy Avelans Boquady      |                                  Participação na confecção do BPMN do Uso do Sistema e de Metodologia e documentação do BPMN                                   |                  Excelente                   |                                                                                                                                                                        [Reunião da confecção do BPMN](COLOCAR LINK)                                                                                                                                                                        |
+|         Pablo Serra Carvalho         |                                                      Participação na confecção do BPMN do Design Sprint.                                                       |                  Excelente                   |                                                                                                                                                           [Reunião da confecção do BPMN](Projeto/Iniciativas%20Extras/ata_01.md)                                                                                                                                                           |
+|      Rodrigo Fonseca Rodrigues       |                                                  Participação na confecção do BPMN Elicitação de Requisitos.                                                   |                     Nula                     |                                                                                                                                                        [Reunião da confecção do BPMN](https://www.youtube.com/watch?v=033lENt9pqk)                                                                                                                                                         |
 
 TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
