docs/modelagem-BPMN-rotacao-de-imagem

--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -29,7 +29,7 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 ## Elicitação de Requisitos
 
-![Artefato Elicitação](../assets/bpmn_elicitacao/bpmn_elicitacao.png)
+<iframe src="../assets/bpmn_elicitacao/bpmn-req.pdf" width="100%" height="600px"></iframe>
 
 <figcaption align='center'>
     <b>Figura 2: Elicitação de Requisitos </b>
@@ -59,7 +59,11 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 ## Metodologia
 
+<center>
+
 ![Artefato Metodologia](../assets/bpmn_metodologia/imagem-bpmn-metodologia.jpg)
+
+</center>
 
 <figcaption align='center'>
     <b>Figura 4: Metodologia </b>
