--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -1,4 +1,8 @@
-# 1.3. Módulo Modelagem BPMN
+<center>
+
+# __Módulo Modelagem BPMN__
+
+</center>
 
 ## **Introduçao**
 
@@ -16,14 +20,15 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 ![Artefato Sprint Design](../assets/bpmn_designsprint/imagem-bpmn-design-sprint.jpg)
 
-<figcaption align='center'>
-    <b>Figura 1: Processo de Sprint Design </b>
-</figcaption>
-<br>
+<center >
+
+**Figura 1:** Processo de Sprint Design 
+
+</center>
 
 <div  style="text-align: center">
 
-<font size="3">Fonte: [Arthur](https://github.com/arthurfonsecaa), [Lucas](https://github.com/bottinolucas), [Pablo](https://github.com/Pabloserrapxx) 2024.</font>
+<font size="3">Autores: [Arthur](https://github.com/arthurfonsecaa), [Lucas](https://github.com/bottinolucas), [Pablo](https://github.com/Pabloserrapxx), 2025.</font>
 
 </div>
 
@@ -31,14 +36,16 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 <iframe src="../assets/bpmn_elicitacao/bpmn-req.pdf" width="100%" height="600px"></iframe>
 
-<figcaption align='center'>
-    <b>Figura 2: Elicitação de Requisitos </b>
-</figcaption>
-<br>
+<center>
+
+**Figura 2:** Elicitação de Requisitos
+
+</center>
+
 
 <div  style="text-align: center">
 
-<font size="3">Fonte: [Fillipe](https://github.com/fillipeb50), [Luiza](https://github.com/LuizaMaluf), [Rodrigo](https://github.com/rodfon3301), [Leticia](https://github.com/HladczukLe), 2024.</font>
+<font size="3">Autores: [Fillipe](https://github.com/fillipeb50), [Luiza](https://github.com/LuizaMaluf), [Rodrigo](https://github.com/rodfon3301), [Leticia](https://github.com/HladczukLe), 2025.</font>
 
 </div>
 
@@ -46,14 +53,16 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 ![Artefato usodoSistema](../assets/bpmn_uso_do_sistema/bpmn_uso_do_sistema.jpeg)
 
-<figcaption align='center'>
-    <b>Figura 3: Uso do Sistema </b>
-</figcaption>
-<br>
+<center>
+
+**Figura 3:** Uso do Sistema 
+
+</center>
+
 
 <div  style="text-align: center">
 
-<font size="3">Fonte: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy) 2024.</font>
+<font size="3">Autores: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy), 2025.</font>
 
 </div>
 
@@ -63,16 +72,14 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 ![Artefato Metodologia](../assets/bpmn_metodologia/imagem-bpmn-metodologia.jpg)
 
+Figura 4: Metodologia
+
 </center>
 
-<figcaption align='center'>
-    <b>Figura 4: Metodologia </b>
-</figcaption>
-<br>
 
 <div  style="text-align: center">
 
-<font size="3">Fonte: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy) 2024.</font>
+<font size="3">Autores: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy), 2025.</font>
 
 </div>
 
@@ -84,6 +91,14 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 <iframe width="560" height="315" src="https://www.youtube.com/embed/033lENt9pqk?si=R3IZTteRWgcHv3lg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
+<font size="3"><p> Vídeo 2: Produção do BPMN - Design Sprint.</p></font>
+
+<div style= "max-width:450px">
+<iframe width="560" height="315" src="https://youtu.be/Ro1UBodqmgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
+
+
 ## Histórico de Versão
 
 | Versão |    Data    |            Descrição             |                     Autor                     |                     Revisor                      |
@@ -91,3 +106,4 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 | `1.0`  | 09/04/2025 |      Criação ModelagemBPMN       | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
 | `1.1`  | 09/04/2025 |  adiciona diagrama metodologia   | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
 | `1.2`  | 09/04/2025 | atualiza diagrama uso do sistema | [Mateus Levy](https://github.com/mateus9levy) | [Lucas Botinno](https://github.com/bottinolucas) |
+| '1.3'  | 11/04/2025 | Adiçao de gravação e padronização do documento | [Luiza](https://github.com/LuizaMaluf) |[Lucas Botinno](https://github.com/bottinolucas)
