--- a/docs/Base/1.5.1.Heatmap.md
+++ b/docs/Base/1.5.1.Heatmap.md
@@ -1,12 +1,16 @@
-# Heatmap
+<center>
 
-## Sobre o heatmap
+# __Heatmap__
 
-Um heatmap, ou mapa de calor, é uma representação visual de dados em que diferentes cores indicam distintos níveis de intensidade ou valor. Ele funciona como uma ferramenta que evidencia áreas de maior ou menor atividade — por exemplo, mostrando as regiões mais visitadas de um site, os locais mais afetados por uma doença ou as variações de temperatura em um país. Esse tipo de visualização facilita a identificação de padrões, tendências e anomalias, tornando a análise de dados mais clara e eficiente.
+</center>
 
-No nosso caso, utilizamos o mapa de calor para ilustrar a disponibilidade de tempo dos membros da equipe, levando em conta seus compromissos pessoais, acadêmicos e profissionais. Essa abordagem nos ajuda a organizar reuniões de forma mais estratégica e respeitosa, evitando conflitos de agenda e sobrecarga de tarefas. Com isso, garantimos uma participação mais ativa e colaborativa de todos no projeto, valorizando suas contribuições e habilidades.
+## __Sobre o heatmap__
 
-## Resultados
+Um __heatmap__, ou mapa de calor, é uma representação visual de dados em que diferentes cores indicam distintos níveis de intensidade ou valor. Ele funciona como uma ferramenta que evidencia áreas de maior ou menor atividade — por exemplo, mostrando as regiões mais visitadas de um site, os locais mais afetados por uma doença ou as variações de temperatura em um país. Esse tipo de visualização facilita a identificação de padrões, tendências e anomalias, tornando a análise de dados mais clara e eficiente.
+
+No nosso caso, utilizamos o mapa de calor para ilustrar a __disponibilidade__ de tempo dos membros da equipe, levando em conta seus compromissos pessoais, acadêmicos e profissionais. Essa abordagem nos ajuda a organizar reuniões de forma mais estratégica e respeitosa, evitando conflitos de agenda e sobrecarga de tarefas. Com isso, garantimos uma participação mais ativa e colaborativa de todos no projeto, valorizando suas contribuições e habilidades.
+
+## __Resultados__
 
 Para determinar rapidamente a disponibilidade dos membros da equipe, criamos uma planilha online compartilhada. Nela, cada pessoa registra sua disponibilidade durante a semana, marcando os períodos em que está livre ou ocupado. Com base nessas informações, elaboramos um mapa de calor correspondente.
 
@@ -19,9 +23,9 @@ Para determinar rapidamente a disponibilidade dos membros da equipe, criamos uma
 
 </center>
 
-<font size="2"><p style="text-align: center">Fonte: [Pablo S. Carvalho](https://github.com/Pabloserrapxx), 2025.</p></font>
+<font size="2"><p style="text-align: center">Autor: [Luiza Maluf](https://github.com/LuizaMaluf), 2025.</p></font>
 
-Com base nas informações da tabela acima, definimos que os encontros serão idealmente realizados às segundas às 21h. Este horário foi mais apropriados para a maior parte dos integrantes do grupo, levando em conta suas disponibilidades e obrigações. Ademais, esses intervalos nos oferecem a oportunidade adequada para debater os temas importantes para o nosso projeto.
+Com base nas informações da tabela acima, definimos que os encontros serão idealmente realizados às __segundas às 21h__. Este horário foi mais apropriados para a maior parte dos integrantes do grupo, levando em conta suas disponibilidades e obrigações. Ademais, esses intervalos nos oferecem a oportunidade adequada para debater os temas importantes para o nosso projeto.
 
 ## Bibliografia
 
