--- a/docs/Base/1.5.4.FerramentasUtilizadas.md
+++ b/docs/Base/1.5.4.FerramentasUtilizadas.md
@@ -1,10 +1,16 @@
-# Ferramentas Utilizadas
+<center>
+
+# __Ferramentas Utilizadas__
+
+</center>
 
 Este documento tem como objetivo detalhar as tecnologias e ferramentas que os integrantes do Grupo 03 utilizaram ao longo do desenvolvimento do projeto.
 
 As ferramentas visam garantir a eficiência e organização do projeto, além de facilitar a colaboração e desenvolvimento de artefatos entre os membros da equipe.
 
-## Tecnologias utilizadas
+## __Tecnologias utilizadas__
+
+<center>
 
 | Logo                                                                                                      | Tecnologia / Ferramenta | Descrição da ferramenta                                                                                                                              |
 | --------------------------------------------------------------------------------------------------------- | ----------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -19,8 +25,10 @@ As ferramentas visam garantir a eficiência e organização do projeto, além de
 | <img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png" width="25">                 | Visual Studio Code      | Editor de código-fonte leve e poderoso, com suporte a várias linguagens de programação, extensões e recursos inteligentes para desenvolvimento.      |
 | <img src="https://img.icons8.com/color/48/000000/whatsapp.png" width="25">                                | WhatsApp                | Aplicativo de mensagens instantâneas que permite troca de texto, voz, imagens, vídeos e chamadas, amplamente usado para comunicação rápida e direta. |
 
+</center>
+
 ## Histórico de Versão
 
 | Versão |    Data    |      Descrição       |                      Autor                       | Revisor |
 | :----: | :--------: | :------------------: | :----------------------------------------------: | :-----: |
-| `1.0`  | 02/04/2025 | Criação do documento | [Lucas Bottino](https://github.com/bottinolucas) |  []()   |
+| `1.0`  | 02/04/2025 | Criação do documento | [Lucas Bottino](https://github.com/bottinolucas) |  [Luiza Maluf]()   |
