--- a/docs/Base/1.5.5.PadronizacaoBranchesCommits.md
+++ b/docs/Base/1.5.5.PadronizacaoBranchesCommits.md
@@ -1,17 +1,23 @@
-# Padronização das Branches e dos Commits
+<center>
 
-## Branches
+# __Padronização das Branches e dos Commits__
+
+</center>
+
+## __Branches__
 
 Este documento serve como um guia para a definição dos padrões de organização das branches e dos commits no que tange o repositório do projeto EuMeAmo, a fim de facilitar a colaboração entre os membros do grupo e garantir a rastreabilidade e organização da contribuição dos estudantes.
 
-## Commits
+## __Commits__
 
 Os padrões de commits serão definidos conforme a documentação do [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/).
 
 
-## Definição da padronização das Branches 
+## __Definição da padronização das Branches__
 
 No atual momento, o padrão de branches do projeto é ramificado a partir da branch **main**. 
+
+<center>
 
 | Prefixo da branch       | Nome da branch       | Quando usar | Exemplo |
 | ----------------------- | -------------------- | ----------- | ------- |
@@ -19,8 +25,11 @@ No atual momento, o padrão de branches do projeto é ramificado a partir da bra
 | FEAT                    | Nome da feature      | Construção de features | FEAT/contador-calorias |
 | FIX                    | Nome da feature      | Correção de erros/bugs | FIX/contador-calorias | 
 
+</center>
 
-## Definição da padronização dos Commits 
+## __Definição da padronização dos Commits__
+
+<center>
 
 | Prefixo do commit | Nome do commit | Quando usar | Exemplo | 
 | ----------------- | -------------- | ----------- | ------- | 
@@ -31,3 +40,10 @@ No atual momento, o padrão de branches do projeto é ramificado a partir da bra
 | fix               | Nome da feature sendo corrigida | Corrigir erros ou bugs em uma feature | fix: corrigindo laço for na lista de clientes | 
 | refactor | Nome da feature que será refatorada | Mudança de código para fins de melhor legibilidade | refactor: autenticação do usuário | 
 
+</center>
+
+## Histórico de Versão
+
+| Versão | Data | Descrição | Autor | Revisor
+|:-:|:-:|:-:|:-:|:-:|
+|`1.0`| 08/04/2025 | Criação do documento| [Lucas Bottino]()| [Luiza Maluf]()|
