--- a/docs/Base/1.5.9.ListaStakeholders.md
+++ b/docs/Base/1.5.9.ListaStakeholders.md
@@ -1,8 +1,14 @@
-# Lista de Stakeholders
+<center>
 
-## Introdução
+# __Lista de Stakeholders__
+
+</center>
+
+## __Introdução__
 
 A lista de stakeholders é um documento que engloba todos os interessados no projeto. Ele contém informações sumarizadas sobre o projeto, principalmente sobre os integrantes, no que tange ao relacionamento dos mesmos para com o desenvolvimento de artefatos, contribuição em grupo, interesse e empenho com o cronograma disciplinar.
+
+<center>
 
 | Nome             | Externo ao projeto?   | Relacionamento com o projeto   |
 | ---------------- | --------------------- | ------------------------------ |
@@ -18,7 +24,9 @@ A lista de stakeholders é um documento que engloba todos os interessados no pro
 | Rodrigo Fonseca Rodrigues | Não | Integrante do grupo, integrante da célula 1 |
 | Milene Serrano | Não | 
 
-## Divisão da equipe 
+</center>
+
+## __Divisão da equipe__
 
 A equipe será dividida em células (clusters), as quais cada célula tem um integrante líder que será o responsável por comunicar os outros líderes sobre as atualizações do que está para fazer, o que está sendo feito, o que já foi feito e quais são e/ou foram os impedimentos para a realização de determinada tarefa.
 
@@ -33,12 +41,12 @@ A equipe será dividida em células (clusters), as quais cada célula tem um int
 
 | Etapa do Projeto | O que deve ser entregue | Prazo final para a entrega | 
 | -----------------|-------------------------|----------------------------|
-| Etapa 01         | Design Sprint           | 10/04/2025                 |
-| Etapa 02         | Artefato Generalista (Mapa Mental, Rich Picture, 5W2H, Léxicos, Público-alvo)| 10/04/2025 |
-| Etapa 03         | Modelagem BPMN | 10/04/2025 |
+| Etapa 01         | Design Sprint           | 11/04/2025                 |
+| Etapa 02         | Artefato Generalista (Mapa Mental, Rich Picture, 5W2H, Léxicos, Público-alvo)| 11/04/2025 |
+| Etapa 03         | Modelagem BPMN | 11/04/2025 |
 
 ## Histórico de Versão
 
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 09/04/2025 | Criação do documento| [Lucas Bottino](https://github.com/LuizaMaluf)| |
+|`1.0`| 09/04/2025 | Criação do documento| [Lucas Bottino]()| [Luiza Maluf]()|
