--- a/docs/Base/1.5.IniciativasExtras.md
+++ b/docs/Base/1.5.IniciativasExtras.md
@@ -1,5 +1,37 @@
-# 1.5. Iniciativas Extras (Base)
+<center>
 
-Breve relato sobre as Iniciativas Extras realizadas pela equipe, no escopo da entrega.
+# __Iniciativas Extras__
 
-Apresentar links para comprobatórios que evidenciem qualquer que seja a realização extra conferida pela equipe no escopo da entrega.
+</center>
+
+As Iniciativas Extras foram desenvolvidas pela equipe para aprimorar a organização e a eficiência durante o processo de entrega do projeto. Essas ações representam esforços adicionais que auxiliaram no alinhamento das atividades, na definição clara de responsabilidades e na criação de um ambiente colaborativo.
+
+Cada uma dessas iniciativas foi cuidadosamente planejada para agregar valor ao processo e facilitar a gestão do projeto. Abaixo, detalhamos os documentos e ferramentas criadas:
+
+## Atas de Reunião
+A equipe produziu atas formais de cada reunião realizada, documentando decisões, pontos de discussão e ações a serem tomadas. Esse registro permite que todos os membros acompanhem o progresso do projeto e mantenham-se atualizados, garantindo transparência e histórico das interações.
+
+- [Ata - 01](Projeto/Iniciativas%20Extras/ata_01.md)
+- [Ata - 02](Projeto/Iniciativas%20Extras/ata_02.md)
+- [Ata - 03](Projeto/Iniciativas%20Extras/ata_03.md)
+- [Ata - 04](Projeto/Iniciativas%20Extras/ata_04.md)
+- [Ata - 05](Projeto/Iniciativas%20Extras/ata_05.md)
+- [Ata - 06](Projeto/Iniciativas%20Extras/ata_06.md)
+- [Ata - 07](Projeto/Iniciativas%20Extras/ata_07.md)
+- [Ata - 08](Projeto/Iniciativas%20Extras/ata_08.md)
+
+## Tabela de Ferramentas
+Foi criada uma tabela listando as principais ferramentas utilizadas pela equipe, com as respectivas finalidades e justificativas de uso, promovendo clareza na adoção de tecnologias ao longo do projeto.
+
+- [Ver ferramentas utilizadas](1.5.4.FerramentasUtilizadas.md)
+
+## HeatMap de Disponibilidade
+Com o objetivo de otimizar a alocação de atividades e melhorar o planejamento das reuniões, a equipe gerou um HeatMap com os dias e horários de disponibilidade de cada membro. Esse recurso gráfico facilita a identificação de janelas ideais para atividades em grupo.
+
+- [Acessar heatmap](1.5.1.Heatmap.md)
+
+## Histórico de Versão
+
+| Versão | Data | Descrição | Autor | Revisor
+|:-:|:-:|:-:|:-:|:-:|
+|`1.0`| 11/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)| [Lucas Bottino](https://github.com/bottinolucas)  |
