--- a/docs/Base/1.Base.md
+++ b/docs/Base/1.Base.md
@@ -1,17 +1,21 @@
-# 1. Desenho de Software (Base)
+<center>
 
-O projeto de **Desenho de Software** foi estruturado com uma base de componentes que auxiliam na organização e no desenvolvimento eficiente do sistema. Abaixo, uma breve descrição de cada item e sua importância para o projeto:
+# __Desenho de Software (Base)__
+
+</center>
+
+O módulo de Desenho de Software (Base) foi estruturado para fornecer uma visão abrangente e bem definida dos elementos fundamentais do sistema, com foco em organização, clareza e eficiência no desenvolvimento. Cada componente apresentado a seguir contribui para alinhar a equipe, validar ideias, documentar decisões e garantir rastreabilidade durante toda a construção do projeto.
+
+A seguir, estão descritos os principais artefatos que compõem essa base e sua relevância dentro do projeto:
 
 ### [1.1 Design Sprint](/Base/1.1.DesignSprint.md)
 Este componente documenta cada etapa do Design Sprint, uma metodologia ágil que busca resolver problemas complexos e validar ideias de forma **rápida** e **colaborativa**. Ele oferece uma visão clara sobre o processo de inovação e o ciclo de desenvolvimento do produto.
 
 ### [1.2 - Artefato Generalista](/Base/1.2.ArtefatoGeneralista.md)
-Foram criados alguns artefatos generalistas relacionados a Design Sprint. Eles são essenciais para o desenvolvimento do projeto, pois fornecem uma visão geral do sistema e ajudam a alinhar a equipe em relação aos objetivos e às necessidades do cliente.
 
-
+Foram desenvolvidos artefatos generalistas a partir das dinâmicas do Design Sprint, com o objetivo de representar visualmente ideias, explorar soluções e fortalecer o entendimento coletivo da proposta. Estes documentos funcionam como base conceitual e ajudam no alinhamento com as necessidades dos usuários.
 
 Os artefatos generalistas são:
-
 
 - [Mapa Mental](/docs/Base/1.2.1.Mapa-mental.md)
 - [Rich Picture](/docs/Base/1.2.2.RichPicture.md)
@@ -19,24 +23,27 @@ Os artefatos generalistas são:
 - [Léxicos](/docs/Base/1.2.4.Lexicos.md)
 
 
-### [1.3 - BPMN (para Scrum e XP)](/Base/1.3.ModelagemBPMN.md)
-Representação visual dos processos de Scrum e XP usando BPMN (Business Process Modeling Notation), proporcionando uma compreensão clara dos fluxos e papéis nas metodologias ágeis. 
+### [1.3 - Modelagem BPMN](/Base/1.3.ModelagemBPMN.md)
 
-### 1.4 - Quadro de Participações dos Membros
-Registro das contribuições e engajamento dos membros da equipe em cada módulo acima. Esse quadro promove a transparência, facilita o acompanhamento de atividades e incentiva a colaboração contínua.
+Modelos elaborados com BPMN (Business Process Model and Notation) para representar visualmente os processos internos relacionados às metodologias Scrum e XP. Esses diagramas facilitam a compreensão dos fluxos de trabalho e responsabilidades no projeto.
 
-### 1.5 - Extras (Iniciativas Adicionais)
-Este artefato reúne melhorias e ferramentas que agregam valor ao projeto, ainda que não sejam obrigatórias. São iniciativas que visam aprimorar processos, eficiência e qualidade do produto final.
+### [1.4 - Quadro de Participações dos Membros](1.4.ParticipacoesBase.md)
+
+Documento que registra a atuação de cada integrante da equipe nas tarefas desenvolvidas ao longo do módulo. Ele assegura transparência, promove a organização e valoriza a contribuição individual.
+
+### [1.5 - Extras Iniciativas Adicionais](1.5.IniciativasExtras.md)
+
+Reúne ações complementares realizadas pela equipe para otimizar a gestão e o andamento do projeto. Essas iniciativas, ainda que não obrigatórias, refletem o comprometimento com a qualidade e a melhoria contínua.
 
 Estes artefatos extras são:
 
-- [Heatmap de disponibilidade]()
-- [Perfil de Usuário]()
-- [Guia de Estilo]()
-- [Ferramentas Utilizadas]()
+- [Heatmap de disponibilidade](1.5.1.Heatmap.md)
+- [Ferramentas Utilizadas](1.5.4.FerramentasUtilizadas.md)
+- [Padronização de Branches e Commits](1.5.5.PadronizacaoBranchesCommits.md)
 
 # Histórico de Versão
 
-| Versão | Data | Descrição | Autor(es) | Revisor(es) | Detalhes da Revisão|
-|------|--------|-----------|-----------| ----------- | -------------------|
-| `1.0` | 02/04/2025 | Criação da documentação de Base | [Carlos Henrique][carlinn1] |||
+| Versão | Data | Descrição | Autor(es) | Revisor(es) |
+|------|--------|-----------|-----------| ----------- | 
+| `1.0` | 02/04/2025 | Criação da documentação de Base | [Carlos Henrique](Crlinn1) | [Luiza Maluf]() |
+| '1.1' | 11/04/2025 | Atualização dos links e artefatos | [Luiza Maluf]() | [Lucas Botino]() |
