--- a/docs/Base/1.1.DesignSprint.md
+++ b/docs/Base/1.1.DesignSprint.md
@@ -1,151 +1,146 @@
-# 1.1. Módulo Design Sprint
+<center>
 
-# 🧠 Estrutura e Planejamento – Design Sprint
+# Módulo Design Sprint
 
-O *Design Sprint* é uma metodologia criada pela Google Ventures para acelerar a resolução de problemas e o desenvolvimento de soluções inovadoras em apenas cinco etapas. A seguir, apresentamos a estrutura adaptada à realidade do nosso projeto, com atividades otimizadas para um sprint de curta duração.
+</center>
 
----
+## __Estrutura e Planejamento – Design Sprint__
 
-## 🔍 Etapa 1 – Unpack (30 min)
+O **Design Sprint** é uma metodologia criada pela Google Ventures para acelerar a resolução de problemas e o desenvolvimento de soluções inovadoras em apenas cinco etapas. A seguir, apresentamos a estrutura adaptada à realidade do nosso projeto, com atividades otimizadas para um sprint de curta duração.
 
-*Objetivo:*  
-Compreender o desafio e reunir informações essenciais sobre o problema a ser resolvido.
 
-*Atividades:*  
+## __Etapa 1 – Unpack (30 min)__
+
+**Objetivo:** Compreender o desafio e reunir informações essenciais sobre o problema a ser resolvido.
+
+**Atividades:**  
 - Sessão de Brainstorming para levantar pontos-chave do escopo  
 - Discussões colaborativas para alinhar o entendimento do time
 
-
-*Ferramentas:*  
+**Ferramentas:** 
 - Miro  
 - Canva (criação de mapas mentais)
 
-*Entregas:*  
+**Entregas:**  
 - Documento consolidando os mapas mentais gerados  
 - Discussões registradas com insights relevantes
 
-*Artefatos produzidos:*  
-- [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental); 
-- [5W2H](../Base/1.2.3.5W2H.md);  
-- [Léxicos](../Base/1.2.4.Lexicos.md).  
-- [Analise de Concorrência](../Base/1.2.5.Publico-Alvo#análise-de-concorrência).
+**Artefatos produzidos:**  
+- [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental) 
+- [5W2H](../Base/1.2.3.5W2H.md)  
+- [Léxicos](../Base/1.2.4.Lexicos.md)  
+- [Analise de Concorrência](../Base/1.2.5.Publico-Alvo#análise-de-concorrência)
 
----
 
-## ✏️ Etapa 2 – Sketch (30 min)
+## __Etapa 2 – Sketch (30 min)__
 
-*Objetivo:*  
-Explorar e visualizar possíveis soluções com base nos insights coletados.
+**Objetivo:** Explorar e visualizar possíveis soluções com base nos insights coletados.
 
-*Atividades:*  
+**Atividades:**  
 - Criação individual de Rich Pictures para expressar visualmente ideias e interpretações  
 - Compartilhamento e explicação dos desenhos entre os membros
 
-*Papel do mediador:*  
+**Papel do mediador:** 
 Incentivar a participação ativa, mesmo de membros com pouca familiaridade com desenho.
 
-*Ferramentas:*  
+**Ferramentas:**  
 - Papel e caneta (presencial)  
 - Miro (remoto)
 
-*Entregas:*  
+**Entregas:**  
 - Coleção dos Rich Pictures desenvolvidos
 
-*Artefatos produzidos:*  
-- [Rich_Picture](../Base/1.2.2.RichPicture.md);
+**Artefatos produzidos:** 
+- [RichPicture](../Base/1.2.2.RichPicture.md)
 
----
+## __Etapa 3 – Decide (30 min)__
 
-## ✅ Etapa 3 – Decide (30 min)
-
-*Objetivo:*  
+**Objetivo:**  
 Selecionar a ideia mais promissora para prototipagem.
 
-*Atividades:*  
+**Atividades:**  
 - Discussão dos Rich Pictures e mapas mentais  
 - Votação e priorização com base na viabilidade e impacto da solução
 - Elicitação de Requisitos
 
-*Ferramentas:*  
+**Ferramentas:**  
 - Miro  
 - Canva  
 - Figma
 
-*Entregas:*  
+**Entregas:**  
 - Documento registrando a ideia escolhida e os critérios de decisão
 
-*Artefatos produzidos:*  
-- Priorização MoSCoW  
+**Artefatos produzidos:**  
+- [Priorização MoSCoW](1.5.7.Priorizacao.md)  
 - [BPMN](../Base/1.3.ModelagemBPMN.md)
-- Tabela de Requisitos
-- Escopo mínimo
-- Lista de Stakeholders
+- [Tabela de Requisitos](1.5.6.Tabela-Requisitos.md)
+- [Escopo mínimo](1.5.8.Escopo-minimo.md)
+- [Lista de Stakeholders](1.5.9.ListaStakeholders.md)
 - [Publico-Alvo](../Base/1.2.5.Publico-Alvo.md).
 - [Matriz CSD](../Base/1.2.5.Publico-Alvo#matriz-csd)
 
----
 
-## 🧪 Etapa 4 – Prototype (30 min)
+## __Etapa 4 – Prototype (30 min)__
 
-*Objetivo:*  
+**Objetivo:**  
 Desenvolver um protótipo de alta fidelidade que represente a solução ideal.
 
-*Atividades:*  
+**Atividades:**  
 - Criação colaborativa do protótipo utilizando o Figma  
 - Representação clara e navegável da interface proposta
 
-*Ferramentas:*  
+**Ferramentas:**  
 - Figma
 
-*Entregas:*  
+**Entregas:**  
 - Protótipo interativo pronto para validação
 
-*Artefatos produzidos:*  
-- Protótipo de alta fidelidade
-- Protótipo de baixa fidelidade
+**Artefatos produzidos:**  
+- [Protótipo de alta fidelidade](1.5.10.Prototipacao.md)
+- [Protótipo de baixa fidelidade](1.5.10.Prototipacao.md)
 
----
+## __Etapa 5 – Test (30 min)__
 
-## 👥 Etapa 5 – Test (30 min)
-
-*Objetivo:*  
+**Objetivo:**  
 Validar a solução prototipada com usuários reais ou potenciais.
 
-*Atividades:*  
+**Atividades:**  
 - Aplicação de questionário baseado no uso do protótipo  
 - Coleta e análise de feedback
 
-*Ferramentas:*  
+**Ferramentas:**  
 - Google Forms
 
-*Entregas:*  
+**Entregas:**  
 - Documento com os resultados e principais aprendizados da etapa de testes
 
-*Artefato produzido:*  
-- Estrutura do questionário que futuramente será aplicado.
-</div>
+**Artefato produzido:**  
+- [Questionário](1.1.6.Questionario.md)
 
-- SERRANO, Milene. Design Sprint, 2021. Material apresentado na Disciplina de Arquitetura e Desenho de Software do curso de engenharia de software da UnB, FCTE. Acesso em: 07 de abril de 2025.
-- [Google Ventures](http://www.gv.com/sprint/);
 
-## 5. Rastrabilidade
+## __Rastrabilidade__
 
-- [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental); 
-- [5W2H](../Base/1.2.3.5W2H.md);  
-- [Léxicos](../Base/1.2.4.Lexicos.md);  
-- [Analise de Concorrência](../Base/1.2.5.Publico-Alvo#análise-de-concorrência);
-- [Publico-Alvo](../Base/1.2.5.Publico-Alvo.md);
-- [Matriz CSD](../Base/1.2.5.Publico-Alvo#matriz-csd);
-- [BPMN](../Base/1.3.ModelagemBPMN.md);
-- [Rich_Picture](../Base/1.2.2.RichPicture.md);
-- [Questionario](../Base/elicitacao/questionario/questionario.md);
+- [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental) 
+- [5W2H](../Base/1.2.3.5W2H.md)  
+- [RichPicture](../Base/1.2.2.RichPicture.md)
+- [Léxicos](../Base/1.2.4.Lexicos.md)  
+- [Analise de Concorrência](../Base/1.2.5.Publico-Alvo#análise-de-concorrência)
+- [Matriz CSD](../Base/1.2.5.Publico-Alvo.md#matriz-csd)
+- [Lista de Stakeholders](1.5.9.ListaStakeholders.md)
+- [Publico-Alvo](../Base/1.2.5.Publico-Alvo.md)
+- [Matriz CSD](../Base/1.2.5.Publico-Alvo#matriz-csd)
+- [BPMN](../Base/1.3.ModelagemBPMN.md)
+- [Rich_Picture](../Base/1.2.2.RichPicture.md)
+- [Questionario](../Base/1.1.6.Questionario.md)
+- [Prototipação](1.5.10.Prototipacao.md)
 
-## 6. Histórico de Versão
+## __Histórico de Versão__
 
 | Versão | Data | Descrição | Autor | Revisor | 
 | :----: | :--: | --------- | ----------- | ------ | 
-| 1.0  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
-| 1.1  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
-| 1.2  | 10/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
+| '1.0'  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
+| '1.1'  | 09/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
+| '1.2'  | 10/04/2025 | Criação do documento de design sprint | [Fillipe](https://github.com/fillipeb50)  | [LuizaMaluf](https://github.com/LuizaMaluf) | 
+| '1.3'  | 11/04/2025 | Formatação | [LuizaMaluf](https://github.com/LuizaMaluf)  | [Lucas Bottino]() | 
 
-</div>
